2006-03-10  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/drawingarea/clock/clock.cc:
	* examples/book/drawingarea/joins/myarea.cc: Update the cairomm enum values for the 
	latest cairomm API.

2006-03-08  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/combobox.hg: Added get/set_title() and corresponding
 	tearoff-title property.
	* gtk/src/iconview.ccg:
	* gtk/src/iconview.hg: Added drag and drop methods.
	* gtk/src/treeview.hg: Corrected a typo in the documentation.
	* tools/m4/convert_gtk.m4: Added new enum conversion.

2006-02-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treeview.hg: Remove an extra : after a @deprecated.

2006-02-25  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Signals appendix: Remove vague uninteresting stuff 
	about different functor types, and mention sigc::ptr_fun, mem_fun distinction earlier.

o2006-02-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_docs.xml: Regenerate from the C files.
	* gtk/src/gtk_docs_override.xml: Update the override for gtk_icon_theme_list_icons(), 
	so that it shows the correct subset examples. Fixes bug #330966 from John Spray 

2006-02-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm.h: Include layout.h, cellview.h, and icontheme.h.
	Bug #332447 from Maxim Udushlivy.

2006-02-24  Rob Page  <page.rob@gmail.com>

 	* gtk/src/icontheme.ccg: Change int* to int to fix segfault. Bug #332437.

2006-02-25  Murray Cumming  <murrayc@murrayc.com>

        * gtk/src/calendar.hg:
        * gtk/src/cellrenderer.hg:
        * gtk/src/messagedialog.hg:
        * gtk/src/textview.hg:
        * gtk/src/treemodelfilter.hg:
        * gtk/src/treepath.hg:
        * gtk/src/treeview.hg:
        * gtk/src/widget.hg: Move the deprecated comment into the _WRAP_METHOD() call,
        using the new feature in glibmm, so that it really shows up in the doxygen
        documentation.

2006-02-22  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
