@@ -1,3 +1,11 @@
+2006-03-22  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/gtkmm/Makefile.am:
+	* gtk/gtkmm/listviewtext.cc:
+	* gtk/gtkmm/listviewtext.h: Added ListViewText, a very simple TreeView 
+	convenience class, from Baltasarq in bug #329333, with formatting and constness 
+	corrections.
+
 2006-03-10  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/book/drawingarea/clock/clock.cc:
